--- a/src/assets/css/_header.scss
+++ b/src/assets/css/_header.scss
@@ -1,13 +1,12 @@
 .header {
-  background: linear-gradient($white, $color2);
-  min-height: 120px;
+  background: $gray-bg;
   box-shadow: 0 56px 72px rgba(51, 75, 203, 0.09);
 
   .logo {
     position: relative;
     background: url("../images/fon-logo.png") no-repeat left;
     background-size: contain;
-    width: 100%;
-    height: 100%;
+    width: 300px;
+    height: 75px;
   }
 }
