--- a/src/assets/css/_header.scss
+++ b/src/assets/css/_header.scss
@@ -1,12 +1,8 @@
 .header {
-  background: $gray-bg;
-  box-shadow: 0 56px 72px rgba(51, 75, 203, 0.09);
+  background: $body-bg;
+  @include boxShadow($body-color);
 
   .logo {
     position: relative;
-    background: url("../images/fon-logo.png") no-repeat left;
-    background-size: contain;
-    width: 300px;
-    height: 75px;
   }
 }
