--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,10 +1,11 @@
 @import "mixins";
-@import "colors";
+@import "variables";
 @import "login";
 @import "portfolio";
 
 //@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;600&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600&display=swap');
 
 html, body {
   margin: 0;
@@ -15,14 +16,15 @@ html, body {
 body {
 
   //font-family: 'Lato', sans-serif;
-  font-family: 'Montserrat Alternates', sans-serif;
-  font-size: .8rem;
+  //font-family: 'Montserrat Alternates', sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: .9rem;
   height: 100%;
 
   //@include textShadow($color2);
 
-  @include gradient-bg($color1, $bg2);
-  background-attachment: fixed;
+  background: url("../images/login-bg3.jpg") no-repeat fixed;
+  background-size: 150%;
 
   #root {
     height: 100%;
@@ -37,9 +39,12 @@ body {
     width: 100%;
     top: 0;
     left: 0;
-    background: url("../images/login-bg3.jpg") no-repeat fixed;
-    background-size: 150%;
-    filter: opacity(55%) blur(15px);
+    //background: url("../images/login-bg3.jpg") no-repeat fixed;
+
+    @include gradient-bg($body-bg, transparent);
+    background-attachment: fixed;
+
+    //filter: opacity(55%) blur(15px);
   }
 }
 
@@ -74,5 +79,29 @@ input:-internal-autofill-selected {
   background-color: none;
 }
 
-@import "sidebar";
 @import "header";
+
+.btn {
+
+  &:focus {
+    box-shadow: none;
+  }
+
+  &.btn-primary {
+    &:focus {
+      box-shadow: none;
+    }
+  }
+}
+
+.card {
+
+  @include card-shadow($shadow);
+
+  .card-title {
+    position: relative;
+    font-weight: 600;
+    font-size: 18px;
+    margin-bottom: 4px;
+  }
+}
